# build-your-own-distillation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
deploy/docker/: Dockerfile  entrypoint.sh
deploy/kubernetes/base/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  pdb.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/overlays/production/: api-resources.patch.yaml  kustomization.yaml  worker-resources.patch.yaml
deploy/kubernetes/overlays/staging/: kustomization.yaml
deploy/monitoring/: alerts.yml  prometheus.yml
deploy/monitoring/grafana/provisioning/dashboards/: dashboards.yml  distillery.json
docs/: database.md  index.md  security.md
docs/api/: reference.md
docs/architecture/: data-flow.md  deployment.md  folder-structure.md  overview.md  sequence-diagrams.md
docs/decisions/: 0001-clean-architecture.md  0002-distillation-strategies.md  0003-async-workers-celery-redis.md  0004-persistence-and-storage.md  README.md
docs/guides/: administrator-guide.md  deployment-guide.md  developer-guide.md  troubleshooting.md  user-guide.md
docs/operations/: runbook.md
examples/: README.md  sdk_example.py
examples/configs/: feature_based.json  llm_teacher.json  response_based.json
examples/requests/: create_job_llm_teacher.json  create_job_response_based.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/distillery/: __init__.py  __main__.py  bootstrap.py  version.py
src/distillery/api/: __init__.py  app.py  asgi.py  deps.py  errors.py  middleware.py
src/distillery/api/routers/: __init__.py  auth.py  health.py  jobs.py
src/distillery/api/schemas/: __init__.py  auth.py  common.py  jobs.py
src/distillery/application/: __init__.py  dto.py
src/distillery/application/services/: __init__.py  auth_service.py  job_service.py  pipeline_service.py
src/distillery/cli/: __init__.py  main.py
src/distillery/config/: __init__.py  settings.py
src/distillery/core/: __init__.py  data.py  engine.py  evaluation.py  losses.py  models.py  trainer.py
src/distillery/core/strategies/: __init__.py  base.py  feature_based.py  llm_teacher.py  registry.py  response_based.py
src/distillery/domain/: __init__.py  entities.py  enums.py  events.py  exceptions.py  ports.py  value_objects.py
src/distillery/infrastructure/: __init__.py  events.py
src/distillery/infrastructure/db/: __init__.py  base.py  mappers.py  models.py  repositories.py  seed.py  session.py
src/distillery/infrastructure/observability/: __init__.py  logging.py  metrics.py
src/distillery/infrastructure/queue/: __init__.py  adapters.py  celery_app.py  tasks.py
src/distillery/infrastructure/security/: __init__.py  api_keys.py  authentication.py  passwords.py  rate_limit.py  tokens.py
src/distillery/infrastructure/storage/: __init__.py  base.py  local.py  s3.py
src/distillery/teachers/: __init__.py
src/distillery/teachers/llm/: __init__.py  anthropic_client.py  base.py  dataset_builder.py  prompts.py
tests/: conftest.py
tests/e2e/: test_api.py  test_cli.py
tests/integration/: test_authentication.py  test_engine.py  test_repositories.py  test_services.py  test_storage.py
tests/load/: locustfile.py
tests/unit/: test_domain_entities.py  test_evaluation.py  test_events.py  test_infra_extra.py  test_llm_dataset_builder.py  test_losses.py  test_models_and_data.py  test_rate_limit.py  test_security.py  test_settings.py  test_strategies.py  test_trainer.py  test_value_objects.py
